crates/vexor-compiler/tests/golden/error/input/range.vx
// step goes down but end is higher
val items = [5, 4..10]
export Circle(10)
